<resources>
    <string name="app_name">Truckiez</string>
    <string name="login">Login</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_jobs">My jobs</string>
    <string name="my_offers">My offers</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="today">Today</string>
    <string name="scheduled">Scheduled</string>
    <string name="complete">Completed</string>
    <string name="future">Future</string>
    <string name="pickup">Pickup</string>
    <string name="dropoff">Dropoff</string>
    <string name="tomorrow">tomorrow</string>
    <string name="on">on</string>
    <string name="at">at</string>
    <string name="boxes">Boxes</string>
    <string name="pallets">Pallets</string>
    <string name="truckload">Truckload</string>
    <string name="no_internet">Internet connection problem, please try again</string>
    <string name="server_error">server error</string>
    <string name="pickup_in">Pickup in</string>
    <string name="km">Km</string>
    <string name="kg">Kg</string>
    <string name="ton">T</string>
    <string name="accept_offer">ACCEPT OFFER</string>
    <string name="route">Route</string>
    <string name="load">Load</string>
    <string name="truck">Truck</string>
    <string name="shipper_details">Shipper details</string>
    <string name="special_requests">Special requests</string>
    <string name="comments">Comments</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="offer_t">OFFER</string>
    <string name="job_t">JOB</string>
    <string name="job">Job</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="success">Success</string>
    <string name="offer_accept_success">Congratulations! you have a new job. Please review the details and make sure the job will be completed successfully</string>
    <string name="signature">Signature</string>
    <string name="bol">POD</string>
    <string-array name="drawer_array">
        <item>Notifications</item>
        <item>Account</item>
        <item>Call Support</item>

    </string-array>
    <string name="accept_offer_title">Accept offer</string>
    <string name="accept_offer_txt">Are you sure you have the truck</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="capture">Capture</string>
    <string name="recapture">Re-capture</string>
    <string name="get_signature">Driver Confirmation</string>
    <string name="get_bol">POD</string>
    <string name="receiver_name">Receiver name</string>
    <string name="choose_image">Choose image from gallery or camera</string>
    <string name="change_status">Change status</string>
    <string name="change_status_content">Do you want to change the status?</string>
    <string name="shipment_completed">Shipment completed</string>
    <string name="no_receiver_name">Please enter the receiver name</string>
    <string name="no_image">Please take a picture of the POD</string>
    <string name="no_signature">Please ask the receiver to sign</string>
    <string name="missed_details">Missed Details</string>
    <string name="change_status_message_5_7">Are you sure you are on the way to pick up?</string>
    <string name="change_status_message_7_9">Are you sure you arrived to pick up?</string>
    <string name="change_status_message_7_11">Have you collected all the required load?</string>
    <string name="change_status_message_11_12">Are you sure you are on the way to drop off?</string>
    <string name="change_status_message_12_14">Are you sure you arrived to drop off?</string>
    <string name="change_status_message_12_15">Are you sure shipment was delivered?</string>
    <string name="confirm_arrival">Did you arrive at the pickup location for job %1$s?</string>
    <string name="get_job_signature">Get job signature</string>
    <string name="get_job_bol">Get job POD</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="call_support">Call us</string>
    <string name="job_completed_successfully">Well done! The job was completed successfully. </string>
    <string name="completed_at">Completed</string>
    <string name="account">ACCOUNT</string>
    <string name="change_picture">CHANGE PICTURE</string>
    <string name="my_status">My status</string>
    <string name="personal_info">Personal info</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="truck_type">Truck type</string>
    <string name="rating">Rating</string>
    <string name="update_info">Update info</string>
    <string name="update_password">Update password</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_error">Passwords do not match, please try again</string>
    <string name="password_error">Incorrect password, please try again</string>
    <string name="error">Error</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="notification_title">Truckiez notifications</string>
    <string name="notification_content">Unread notifications</string>
    <string name="offer_error">This offer  is no longer assigned to you. If you need help with this offer please contact your carrier or Truckiez</string>
    <string name="job_error">This job is no longer assigned to you. If you need help with this job please contact your carrier or Truckiez</string>
    <string name="offer">Offer</string>
    <string name="location_error">Location error</string>
    <string name="location_error_content">Permission of location missed. do you want to open the permission?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="get_password">GET PASSWORD</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="to_sign_up"><u>Need to Signup?</u></string>
    <string name="enter_email">Please enter your email address</string>
    <string name="back_to_login"><u>Back to login</u></string>
    <string name="resend"><u>Resend</u></string>
    <string name="send">SEND</string>
    <string name="login_error">Login error</string>
    <string name="login_empty_details">Email or password empty</string>
    <string name="new_password_message">A new password has been sent to your email</string>
    <string name="new_sms_password_message">A password has been sent to you in SMS message</string>
    <string name="sign_out">Sign out</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="n_new_offer">New offer</string>
    <string name="n_job">Job</string>
    <string name="n_message">Message</string>
    <string name="required_field">Required field</string>
    <string name="invalid_email">Invalid email</string>
    <string name="save_changes_">Save changes</string>
    <string name="save_changes_message">Your changes were saved successfully</string>
    <string name="save_changes_message_failed">Your changes were not saved, please try again</string>
    <string name="delete_notification">Delete notification</string>
    <string name="delete_notification_message">Are you sure you want to delete the message?</string>
    <string name="advance">Advanced</string>
    <string name="search">Search</string>
    <string name="key_word">Key word</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="location">Location</string>
    <string name="box">Box</string>
    <string name="pallet">Pallet</string>
    <string name="no_jobs_today">There are no jobs today</string>
    <string name="no_scheduled_jobs">There are no scheduled jobs</string>
    <string name="no_completed_jobs">There are no completed jobs</string>
    <string name="no_jobs">There isn\'t jobs </string>
    <string name="no_offers">There are no offers</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="clear_all">Clear all</string>
    <string name="warning">Warnin</string>
    <string name="warning_delete_all_notifications">Are you sure you want to delete all the notifications?</string>
    <string name="search_no_results">No search results</string>
    <string name="agree_to_terms"><u> I agree to the terms</u></string>
    <string name="capture_image">Capture image</string>
    <string name="skip"><u>Skip</u></string>
    <string name="wellcome">Wellcome to truckiez</string>
    <string name="add_profile_image">Please add your picture</string>
    <string name="not_allow_accept_offer">You are not allowed to accept offers. please contact your manager</string>
    <string name="locations">Locations</string>
    <string name="settings">Settings</string>
    <string name="location_close_title">GPS is settings</string>
    <string name="location_close_content">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="truckiez_terms">Truckiez terms</string>
    <string name="nothing_yet">Nothing yet</string>
    <string name="view"><u>View</u></string>
    <string name="specials_loads">SPECIALS LOADS</string>
    <string name="job_s">Job</string>
    <string name="offer_s">Offer</string>
    <string name="gps_close_title">Truckiez location settings</string>
    <string name="gps_close_content">Your location is not enabled. Please go to settings and enable location</string>
    <string name="server_error_title">Oops</string>
    <string name="server_error_text">Truckiez has a problem. Please try again</string>
    <string name="log_out_warning_title">Warning</string>
    <string name="log_out_warning_content">Are you sure you want to logout?</string>
    <string name="email_exist">This email is not valid. Please try again or contact support</string>
    <string name="phone_exist">This phone number is not valid. Please try again or contact support</string>
    <string name="user_details_changed_title">Account settings changed</string>
    <string name="user_details_changed_message">Your account settings was changed. Please try to login again or contact support.</string>
    <string name="share">share</string>
    <string name="upload">Upload</string>
    <string name="upload_message_title">Upload success</string>
    <string name="upload_message_content">Image uploaded successfully</string>
    <string name="edit_notes">Edit notes</string>
    <string name="notes_message_title">Saved successfully</string>
    <string name="notes_message_content">Notes saved successfully</string>
    <string name="start_phone">+61</string>
    <string name="record">Record</string>
    <string name="login_error_txt">Phone number is not correct</string>
    <string name="password_error_txt">Password is not correct</string>
    <string name="forgot_password_error_txt">Phone number is not correct</string>
    <string name="phone_format_error">Please enter the phone number in this format: 0412341234</string>
    <string name="driver_changed_title">Job change</string>
    <string name="driver_changed_text">This job is no longer assigned to you. If you need help with this job please contact your carrier or Truckiez</string>
    <string name="notice">Notice</string>
    <string name="profile_image_problem">Image was not saved, please try again or skip this step</string>
    <string name="job_confirmation">CONFIRMATION</string>
    <string name="pickup_t">PICKUP</string>
    <string name="dropoff_t">DROPOFF</string>
</resources>