<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shtibel.truckies.activities.profileImage.ProfileImageActivity">

    <ImageView
        android:id="@+id/profile_img_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash1"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/profile_img_logo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:src="@drawable/truckies_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"/>

    <!--<ImageView-->
        <!--android:id="@+id/profile_img_capture"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="300dp"-->
        <!--android:layout_below="@+id/profile_img_logo"-->
        <!--android:layout_above="@+id/profile_img_footer"-->
        <!--android:layout_marginTop="@dimen/medium_margin"-->
        <!--android:layout_marginBottom="@dimen/medium_margin"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:scaleType="centerCrop"/>-->

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_image"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"/>

        <Button
            android:id="@+id/profile_img_capture_btn"
            android:layout_width="200dp"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/style_login_btn"
            android:text="@string/capture_image"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="openCaptureImage"
            android:layout_marginTop="@dimen/x_large_margin"
            android:layout_gravity="center"/>
        <ProgressBar
            android:id="@+id/profile_img_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:translationZ="2dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_sub_title"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/large_margin"
            android:padding="10dp"
            android:onClick="skip"/>

    </LinearLayout>


</RelativeLayout>
