<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_popup_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/style_light_blue_title">

        <TextView
            android:id="@+id/popup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture_image"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/medium_margin"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/popup_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="25dp">


            <ImageView
                android:id="@+id/job_c_capture_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/job_bol_title"
                android:layout_above="@+id/job_bol_btn_layout"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_marginLeft="@dimen/medium_margin"
                android:background="@drawable/style_job_offer_item_bg"
                android:padding="2dp"/>


        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/large_margin">

        <Button
            android:id="@+id/popup_c_capture_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/style_blue_btn"
            android:text="@string/capture"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_sub_title"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginRight="@dimen/small_margin"
            android:paddingRight="@dimen/small_padding"
            android:paddingLeft="@dimen/small_padding"/>
        <Button
            android:id="@+id/popup_c_upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/style_blue_btn"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_sub_title"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginRight="@dimen/small_margin"
            android:paddingRight="@dimen/small_padding"
            android:paddingLeft="@dimen/small_padding"
            android:visibility="visible"/>
        <Button
            android:id="@+id/popup_c_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/style_blue_btn"
            android:text="@string/close"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_sub_title"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginRight="@dimen/small_margin"
            android:paddingRight="@dimen/small_padding"
            android:paddingLeft="@dimen/small_padding"/>

    </LinearLayout>


</LinearLayout>