<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shtibel.truckies.activities.login.FillPasswordActivity">

    <ImageView
        android:id="@+id/login_fp_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash1"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/login_fp_logo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:src="@drawable/truckies_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_sms_password_message"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/login_fp_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_button_height"
            android:background="@drawable/style_login_field"
            android:inputType="numberPassword"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLength="12"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin">
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_button_height"
                android:background="@drawable/style_login_btn"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="login"/>
            <ProgressBar
                android:id="@+id/login_fp_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:translationZ="2dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:textSize="@dimen/text_size_sub_title"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x_large_margin"
            android:padding="10dp"
            android:onClick="goBack"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/to_sign_up"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textStyle="italic"-->
            <!--android:textSize="@dimen/text_size_sub_title"-->
            <!--android:layout_gravity="center"-->
            <!--android:padding="10dp"-->
            <!--android:onClick="openSite"/>-->


    </LinearLayout>

</RelativeLayout>
